# card-detection

./: README.md  datasets.py  export.py  iou.py  loss.py  nms.py  plots.py  poker.yaml  pt2pth.py  sample_test.py  train.py  util.py  val.py
models/: common.py  experimental.py  yolo.py  yolov5s.yaml
runs/exp/: opt.yaml
tvm/: Makefile  deplop_poker  from_yolov5s_three_part.py  general.py
tvm/yolov5_poker/: CMakeLists.txt  Makefile  autorun.sh  classes.txt  from_yolov5s_onnx_poker.py  from_yolov5s_pytorch_poker.py  from_yolov5s_three_part.py  gen  general.py  test_opencv.cpp  test_opencv.h  test_uart.h  test_yolov5s  test_yolov5s.cc  test_yolov5s_pytorch_poker.py  tvm_runtime_pack.cc
tvm/yolov5_poker/exe/: classes.txt  delopy
tvm/yolov5_poker/exe/3p/: yolov5s_poker_rasp3b.json
tvm/yolov5_poker/include/: cal_time.h  data_process.h  test_opencv.h  test_uart.h  tool.h  tvm_runtime_pack.h  util.h
tvm/yolov5_poker/python/: from_yolov5s_onnx_poker.py  from_yolov5s_pytorch_poker.py  from_yolov5s_three_part.py  utils.py
tvm/yolov5_poker/src/: test_yolov5s.cc
